# speech-to-text

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: analyzer.py  audio_processing.py  config.py  errors.py  logging_config.py  main.py  meeting_analyzer.py  models.py  service.py
app/providers/: base.py  openai_provider.py
tests/: test_advanced_api.py  test_api.py  test_service.py
text_to_speech_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
