[project]
name = "text-to-speech-service"
version = "0.1.0"
description = "Robust text-to-speech API service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "openai>=1.65.0,<2.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
